Fixes #50. Tweak spacing of nav menu to avoid drop.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -60,6 +60,10 @@ blockquote.label_text {
   margin-top: 2em;
 }
 
+.navbar .nav > li > a {
+  padding: 10px 15px 10px 0px;
+}
+
 .navbar .brand {
   font-family: @fancyFonts;
   font-size: 200%;
